<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true">

    <TextView
        android:id="@+id/edit_text_number"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        style="@style/TextViewStyle"/>
<!--        android:layout_margin="@dimen/text_margin_from_left_and_right"-->
<!--        android:layout_marginTop="@dimen/text_margin_from_top"-->

<!--        android:background="@drawable/light_background"-->
<!--        android:backgroundTintMode="screen"-->
<!--        android:gravity="end"-->
<!--        android:hint="@string/hint_edit_text"-->
<!--        android:textColor="@color/white"-->
<!--        android:textColorHint="@color/white"-->
<!--        android:textSize="@dimen/text_size_edit_text" />-->


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/clear_button"
            style="@style/NumberButtonStyle.CAButton"
            android:text="@string/clear_char" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/left_bracket_button"
            style="@style/NumberButtonStyle.OperationButton"
            android:text="@string/left_bracket_char" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/right_bracket_button"
            style="@style/NumberButtonStyle.OperationButton"
            android:text="@string/right_bracket_char" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/minus_button"
            style="@style/NumberButtonStyle.OperationButton"
            android:text="@string/minus_char" />


    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/seven_button"
            style="@style/NumberButtonStyle"
            android:text="@string/seven_char" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/eight_button"
            style="@style/NumberButtonStyle"
            android:text="@string/eight_char" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/nine_button"
            style="@style/NumberButtonStyle"
            android:text="@string/nine_char" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/plus_button"
            style="@style/NumberButtonStyle.OperationButton"
            android:text="@string/plus_char" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/four_button"
            style="@style/NumberButtonStyle"
            android:text="@string/four_char" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/five_button"
            style="@style/NumberButtonStyle"
            android:text="@string/five_char" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/six_button"
            style="@style/NumberButtonStyle"
            android:text="@string/six_char" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/div_button"
            style="@style/NumberButtonStyle.OperationButton"
            android:text="@string/div_char" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/one_button"
            style="@style/NumberButtonStyle"
            android:text="@string/one_char" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/two_button"
            style="@style/NumberButtonStyle"
            android:text="@string/two_char" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/three_button"
            style="@style/NumberButtonStyle"
            android:text="@string/three_char" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mult_button"
            style="@style/NumberButtonStyle.OperationButton"
            android:text="@string/mult_char" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_zero"
            style="@style/NumberButtonStyle"
            android:text="@string/zero_char" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/exp_button"
            style="@style/NumberButtonStyle.OperationButton"
            android:text="@string/exp_char" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_coma"
            style="@style/NumberButtonStyle.OperationButton"
            android:text="@string/coma_char" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_equals"
            style="@style/NumberButtonStyle.OperationButton"
            android:text="@string/equals_char" />
    </TableRow>
</TableLayout>
